@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-01-10 DP  1.8.2  Correctly identify the schema of trigger functions that
+                      are in system catalogs as can be the case with integrated
+                      full text search.
 2008-01-09 HS  1.8.2  Warn the user if a file cannot be saved in the default
                       encoding.
 2008-01-07 DP  1.8.2  Undecorated out-param types must be included in EDB-SPL
